# juce_bluetooth

./: .clang-format  .envrc  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  gattlib.nix
.github/workflows/: ci.yml
cmake/: Config.cmake.in  gattlib_adapter_probe_connected_devices.patch  gattlib_adapter_report_rssi_updates.patch
cmake/toolchain/: cross-nixos-aarch64.cmake
examples/: CMakeLists.txt
examples/discover/: CMakeLists.txt  main.cpp
examples/hrs/: CMakeLists.txt  main.cpp
examples/scan/: CMakeLists.txt  main.cpp
examples/using_find_package/: CMakeLists.txt  main.cpp
juce_bluetooth/: juce_bluetooth.h  juce_bluetooth_Linux.cpp  juce_bluetooth_OSX.mm  juce_bluetooth_Windows.cpp
juce_bluetooth/bluez-dbus/: CMakeLists.txt
juce_bluetooth/include/: format.h  identifiers.h  juce_bluetooth_log.h  message.h  ranges.h  valuetree_listener.h  valuetrees.h
juce_bluetooth/include/native/linux/: bluez_utils.h  gattlib_utils.h
juce_bluetooth/include/native/macos/: corebluetooth_utils.h  retained.h
juce_bluetooth/include/native/windows/: winrt_bug_workaround.h  winrt_utils.h
nix/: devshell.nix  formatter.nix
